maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    for(i <- 0 to getMondeLargeur -1){
    ^